# tab-ai-mcp

./: .gitignore  ADMIN.md  ARCHITECTURE.md  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml
.claude/commands/: improve-mcp.md
src/tab_ai_mcp/: __init__.py  config_detector.py  odata_client.py  server.py  xdto_enricher.py
src/tab_ai_mcp/knowledge/: __init__.py  accounting.py  erp.py  unf.py  zup.py
src/tab_ai_mcp/schemas/: ed_nma_str.xsd
