[project]
name = "tab-ai-mcp"
version = "0.4.22"
description = "MCP-сервер для 1С: семантический поиск, CRUD через OData, обогащение объектов по EnterpriseData схеме"
license = { text = "MIT" }
authors = [
    { name = "TAB AI", email = "support@tab-ai.ru" }
]
keywords = ["mcp", "1c", "1с", "odata", "ai", "semantic-search", "enterprise", "tab-ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
tab-ai-mcp = "tab_ai_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Dziden/tab-ai-mcp"
Issues = "https://github.com/Dziden/tab-ai-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tab_ai_mcp"]
